<?xml version="1.0"?>
<package>
  <name>hyq_transforms</name>
  <version>0.0.1</version>
  <description>Additional tranforms for HyQ (e.g. from marker placed on the frame to base link)</description>
  <maintainer email="marco.camurri@iit.it">Marco Camurri</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>  
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>tf</run_depend>	
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>

