<?xml version="1.0"?>
<package format="2">
  <name>ipab_msgs</name>
  <version>0.5.0</version>
  <description>ROS message and service definitions, mainly to interface with EXOTica and OpenHumanoids to ROS translators</description>
  <maintainer email="drc@todo.todo">drc</maintainer>
  <license>TODO</license>

  <author email="maurice.fallon@ed.ac.uk">Maurice Fallon</author>
  <author email="v.ivan@ed.ac.uk">Vladimir Ivan</author>
  <author email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</author>
  <author email="yiming.yang@ed.ac.uk">Yiming Yang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
