<?xml version="1.0"?>
<package format="2">
  <name>sicktoolbox_wrapper</name>
  <version>0.0.0</version>
  <description>Package providing translators between the MIT DRC, IHMC SCS, and ROS-based systems.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="drc@todo.todo">TODO</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>

  <depend>geometry_msgs</depend>
  <depend>ihmc_msgs</depend>
  <depend>image_transport</depend>
  <depend>ipab_lwr_msgs</depend>
  <depend>ipab_msgs</depend>
  <depend>kdl_conversions</depend>
  <depend>octomap_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export />
</package>
