<?xml version="1.0"?>
<package format="2">
  <name>val_hardware_msgs</name>
  <version>1.0.0</version>
  <description>The val_hardware_msgs package</description>

  <maintainer email="frank.b.mathis@nasa.gov">Frank Mathis</maintainer>
  <license>NASA-1.3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>

</package>
